# sqrt-higher-precision

./: .gitignore  CMakeLists.txt  README.md  format.sh  run_tests.sh  vcpkg.json
.github/workflows/: ci-format.yml  ci-tests.yml
data/: datas.md  sqrt_6.txt  sqrt_7.txt
include/: Approximator.hpp  FileReader.hpp  Fraction.hpp  Sequence.hpp  SquareRoot.hpp
src/: Approximator.cpp  FileReader.cpp  Fraction.cpp  Sequence.cpp  SquareRoot.cpp  main.cpp
src/fraction/: Fraction.cpp  Fraction.hpp
tests/: test_bench_marks.cpp  test_file_reader.cpp  test_fraction.cpp  test_main.cpp  test_sqrt.cpp
